[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {package = "ratatui", version = "*", features = ["all-widgets"]}
crossterm = "*"
rodio = "*" 
home = "*"
audiotags = { version = "*", package = "audiotags" }
reqwest = { version = "*", features = ["json", "blocking"] }  
confy = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.0"
